--- a/style/prosemirror.css
+++ b/style/prosemirror.css
@@ -1,71 +1,75 @@
 .ProseMirror .is-editor-empty:first-child::before {
-  content: attr(data-placeholder);
-  float: left;
-  color: #adb5bd;
-  pointer-events: none;
-  height: 0;
+    content: attr(data-placeholder);
+    float: left;
+    color: #adb5bd;
+    pointer-events: none;
+    height: 0;
 }
+
 .ProseMirror .is-empty::before {
-  content: attr(data-placeholder);
-  float: left;
-  color: #adb5bd;
-  pointer-events: none;
-  height: 0;
+    content: attr(data-placeholder);
+    float: left;
+    color: #adb5bd;
+    pointer-events: none;
+    height: 0;
 }
 
 /* Custom image styles */
 
 .ProseMirror img {
-  transition: filter 0.1s ease-in-out;
+    transition: filter 0.1s ease-in-out;
+}
 
-  &:hover {
+.ProseMirror img:hover {
     cursor: pointer;
     filter: brightness(90%);
-  }
+}
 
-  &.ProseMirror-selectednode {
+.ProseMirror img .ProseMirror-selectednode {
     outline: 3px solid #5abbf7;
     filter: brightness(90%);
-  }
 }
 
 /* Custom TODO list checkboxes – shoutout to this awesome tutorial: https://moderncss.dev/pure-css-custom-checkbox-style/ */
 
 ul[data-type="taskList"] li > label {
-  margin-right: 0.2rem;
-  user-select: none;
+    margin-right: 0.2rem;
+    user-select: none;
 }
 
 @media screen and (max-width: 768px) {
-  ul[data-type="taskList"] li > label {
-    margin-right: 0.5rem;
-  }
+    ul[data-type="taskList"] li > label {
+        margin-right: 0.5rem;
+    }
 }
 
 ul[data-type="taskList"] li > label input[type="checkbox"] {
-  -webkit-appearance: none;
-  appearance: none;
-  background-color: #fff;
-  margin: 0;
-  cursor: pointer;
-  width: 1.2em;
-  height: 1.2em;
-  position: relative;
-  top: 5px;
-  border: 2px solid black;
-  margin-right: 0.3rem;
-  display: grid;
-  place-content: center;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    margin: 0;
+    cursor: pointer;
+    width: 1.2em;
+    height: 1.2em;
+    position: relative;
+    top: 5px;
+    border: 2px solid black;
+    margin-right: 0.3rem;
+    display: grid;
+    place-content: center;
 
-  &:hover {
+
+}
+
+ul[data-type="taskList"] li > label input[type="checkbox"]:hover {
     background-color: #f8f9fa;
-  }
+}
 
-  &:active {
+ul[data-type="taskList"] li > label input[type="checkbox"]:active {
     background-color: #e9ecef;
-  }
+}
 
-  &::before {
+ul[data-type="taskList"] li > label input[type="checkbox"]::before {
     content: "";
     width: 0.65em;
     height: 0.65em;
@@ -74,21 +78,14 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
     box-shadow: inset 1em 1em;
     transform-origin: center;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-  }
+}
 
-  &:checked::before {
+ul[data-type="taskList"] li > label input[type="checkbox"]:checked::before {
     transform: scale(1);
-  }
 }
 
 ul[data-type="taskList"] li[data-checked="true"] > div > p {
-  color: #a8a29e;
-  text-decoration: line-through;
-  text-decoration-thickness: 2px;
-}
-
-/* Overwrite tippy-box original max-width */
-
-.tippy-box {
-  max-width: 400px !important;
+    color: #a8a29e;
+    text-decoration: line-through;
+    text-decoration-thickness: 2px;
 }
