--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
     body {
-        @apply text-neutral-950;
+        @apply text-neutral-950 dark:text-neutral-50;
+        @apply bg-white dark:bg-neutral-950;
     }
 }
