--- a/style/prosemirror.css
+++ b/style/prosemirror.css
@@ -57,8 +57,6 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
     margin-right: 0.3rem;
     display: grid;
     place-content: center;
-
-
 }
 
 ul[data-type="taskList"] li > label input[type="checkbox"]:hover {
@@ -78,6 +76,7 @@ ul[data-type="taskList"] li > label input[type="checkbox"]::before {
     box-shadow: inset 1em 1em;
     transform-origin: center;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    color: #121212;
 }
 
 ul[data-type="taskList"] li > label input[type="checkbox"]:checked::before {
