style: add scrollbar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,5 +6,6 @@
     body {
         @apply text-neutral-950 dark:text-neutral-50;
         @apply bg-white dark:bg-neutral-950;
+        @apply scrollbar-thin scrollbar-track-neutral-700/50 scrollbar-thumb-neutral-500 scrollbar-thumb-rounded;
     }
 }
